Scaffold Login and Settings page

--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using hci594_capstone
-@namespace hci594_capstone.Pages
+@using Neuron
+@namespace Neuron.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
