Updates to the Home screen to match the look-and-feel of the hi-fi prototype

--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -60,6 +60,7 @@
   }
 
   /* Global */
+  a:hover {color: #B4261B;}
   app-home .btn-primary:hover {
     background-color: #B4261B;
     border: 0;
