--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -60,10 +60,17 @@
   }
 
   /* Global */
+  
   a:hover {color: #B4261B;}
-  app-home .btn-primary:hover {
+  app-home .btn-primary:hover,
+  app-add-task .btn-primary:hover,
+  app-settings .btn-primary:hover {
     background-color: #B4261B;
     border: 0;
+  }
+  body {
+    margin:0;
+    padding:0;
   }
 
   /* Home Styles */
@@ -150,3 +157,225 @@ app-home a.btn {
     font-size: 1.3em;
     display: block;
 }    
+
+/* Inside Screen Styles */
+  
+.content-header {
+  background-color: #EE493B;
+  text-align: center;
+  padding: 30px 0px;
+  margin: 0 0 25px;
+}
+.content-header h1 {
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 100;
+}
+.post-header-container {
+  border-bottom: 1px solid #ccc;
+  display: inline-block;
+  width: 100%;
+  padding: 2px 0 15px;
+}
+.motivational-quote {
+  width:50%;
+  float:left;
+  text-align: left;
+}
+.motivational-quote p.title {
+  font-weight: 600;
+}
+.motivational-quote p.quote {
+  color: #EE493B;
+  font-size: 1.5em;
+}
+.todays-date {
+  width:50%;
+  float:right;
+  text-align: right;
+}
+.todays-date p {
+  color: #EE493B;
+  font-size: 2.8em;
+}
+.todays-tasks {
+  background-color: #EE493B;
+  display: inline-block;
+  color: #fff;
+  font-weight: 600;
+  font-size: 1.6em;
+  padding: 12px 58px 12px 4%;
+  border-radius: 0 35px 35px 0;
+  margin: 12px 0 20px -4%;
+}
+.edit-tasks {
+  float: right;
+  display: inline-block;
+  font-size: 1.3em;
+  padding: 12px 0 12px 0;
+  margin: 12px 0 20px 0;
+  color: #999;
+}
+
+/* Add Tasks */
+app-add-task div.form-group {
+  border-bottom: 1px solid #ccc;
+  padding: 5px 0 25px;
+}
+app-add-task div.form-group label {
+  color: #EE493B;
+  font-size: 1.8em;
+}
+app-add-task div.form-group input.form-control.task-name {
+  font-size: 1.8em;
+  background-image: unset;
+  border: 1px solid #EE493B;
+  padding-left: 18px;
+  color: #999;
+}
+app-add-task div.form-group select {
+    font-size: 1.5em;
+    background-image: unset;
+    border: 1px solid #EE493B;
+    color: #999;
+    height: unset;
+    padding: 14px 12px;
+    border-radius: 0;
+}
+app-add-task div.form-group.sync-device {
+  background-color: rgba(238,73,59, 0.12);
+  border-radius: 75px;
+  text-align: center;
+  margin: 0 20%;
+  padding: 20px 0;
+}
+app-add-task div.form-group.sync-device h2 {
+  color: #EE493B;
+  text-transform: lowercase;
+  font-weight: 700;
+  display: inline-block;
+  margin:0;
+}
+app-add-task div.form-group.sync-device .slider.round {
+  background-color: #EE493B;
+}
+app-add-task div.form-group.sync-device .switch {
+  margin: 0 0 -6px 12px;
+}
+app-add-task .btn-primary {
+  color: #fff;
+  background-color: #EE493B;
+  width: 100%;
+  margin: 38px 0 0;
+  border-radius: 0;
+  border: 0;
+  padding: 18px 0;
+  text-transform: uppercase;
+  font-size: 1.5em;
+  font-weight: 400;
+}
+
+/* Edit Settings */
+app-settings .edit-row-container {
+  border-bottom: 1px solid #ccc;
+  display: inline-block;
+  width: 100%;
+  margin: 0 0 18px;
+  padding: 0 0 10px;
+}
+app-settings h2 {
+  color: #EE493B;
+  font-size: 1.8em;
+  margin-bottom: 5px;
+  font-weight: 700;
+  display: inline;
+}
+app-settings .switch {
+  float: right;
+}
+app-settings .slider.round {
+  background-color: #EE493B;
+}
+app-settings .form-group {
+  float: left;
+  width: 100%;
+  margin-bottom: 10px;
+}
+app-settings input.form-check-input {
+  float:right;
+  height: 25px;
+  width: 25px;
+  margin-right: 15px;
+}
+app-settings label.form-check-label {
+  float: left;
+  font-weight: 100;
+  font-size: 1.3em;
+  color: #666;
+}
+app-settings div.form-group.sync-device {
+  background-color: rgba(238,73,59, 0.12);
+  border-radius: 75px;
+  text-align: center;
+  margin: 0 20%;
+  padding: 20px 0;
+  display: block;
+  width: unset;
+  float: unset;
+}
+app-settings div.form-group.sync-device h2 {
+  color: #EE493B;
+  text-transform: lowercase;
+  font-weight: 700;
+  display: inline-block;
+  margin:0;
+}
+app-settings div.form-group.sync-device .slider.round {
+  background-color: #EE493B;
+}
+app-settings div.form-group.sync-device .switch {
+  margin: 0 0 -6px 12px;
+  float: unset;
+}
+app-settings .btn-primary {
+  color: #fff;
+  background-color: #EE493B;
+  width: 100%;
+  margin: 38px 0 0;
+  border-radius: 0;
+  border: 0;
+  padding: 18px 0;
+  text-transform: uppercase;
+  font-size: 1.5em;
+  font-weight: 400;
+}
+
+/* Mobile View */
+@media (max-width: 768px) {
+  .content-container {
+    padding: 0 5%;
+  }
+  .col-sm-9 {
+    width:100% !important;
+    padding:0 !important;
+    margin:0 !important;
+  }
+  .col-md-6 {
+    margin: 0 auto !important;
+    float: unset !important;
+  }
+  app-add-task div.form-group.sync-device,
+  app-settings div.form-group.sync-device {
+    margin: 0 6%;
+    padding: 12px 0;
+  }
+  app-add-task div.form-group.sync-device h2,
+  app-settings div.form-group.sync-device h2 {
+    font-size: 1.5em;
+  }
+  app-add-task .btn-primary,
+  app-settings .btn-primary {
+    width: 111%;
+    margin: 38px 0 0 -6%;
+  }
+}
