--- a/ClientApp/src/app/add-task/add-task.component.html
+++ b/ClientApp/src/app/add-task/add-task.component.html
@@ -1,6 +1,6 @@
 
 <div class="content-header">
-    <h1><b>Add</b> Task</h1>
+    <h1><b>Add</b> a Task</h1>
   </div>
 
 <div class="content-container">
