--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,4 +1,4 @@
-<div class='main-nav'>
+<div class='main-nav' *ngIf='nav.isVisible'>
     <div class='navbar navbar-inverse'>
         <div class='navbar-header'>
             <button type='button' class='navbar-toggle' data-toggle='collapse' data-target='.navbar-collapse' [attr.aria-expanded]='isExpanded'
@@ -24,10 +24,10 @@
                     </a>
                 </li>
                 <li [routerLinkActive]='["link-active"]'>
-                        <a [routerLink]='["/add-task"]' (click)='collapse()'>
-                            <i class='fas fa-plus'></i> Add Task
-                        </a>
-                    </li>
+                    <a [routerLink]='["/add-task"]' (click)='collapse()'>
+                        <i class='fas fa-plus'></i> Add Task
+                    </a>
+                </li>
                 <li [routerLinkActive]='["link-active"]'>
                     <a [routerLink]='["/settings"]' (click)='collapse()'>
                         <span class='fas fa-cogs'></span> Settings
