--- a/ClientApp/src/app/add-task/add-task.component.html
+++ b/ClientApp/src/app/add-task/add-task.component.html
@@ -23,13 +23,17 @@
     </div>
     <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !estimatedCompletionTime.valid }">
       <label for="estimatedCompletionTime">Estimated time to complete</label>
-      <select class="form-control" id="focusTimeSelect">
+      <div class="horizontal-slidecontainer">
+        <input type="range" min="1" max="100" value="50" class="horizontal-slider" id="myRange">
+        <p>Value: <span id="demo"></span></p>
+      </div>
+      <!--<select class="form-control" id="focusTimeSelect">
         <option>1</option>
         <option>2</option>
         <option>3</option>
         <option>4</option>
         <option>5</option>
-      </select>
+      </select>-->
       <div *ngIf="f.submitted && !estimatedCompletionTime.valid" class="help-block">Estimated time is required</div>
     </div>
     <div class="form-group">
@@ -62,3 +66,12 @@
     <button class="btn btn-primary" (click)="incrementCounter()">Add Task</button>
   </form>
 </div>
+<script>
+    var slider = document.getElementById("myRange");
+    var output = document.getElementById("demo");
+    output.innerHTML = slider.value;
+    
+    slider.oninput = function() {
+      output.innerHTML = this.value;
+    }
+</script>
