Updates for Task screen

--- a/ClientApp/src/app/tasks/tasks.component.html
+++ b/ClientApp/src/app/tasks/tasks.component.html
@@ -27,9 +27,34 @@
 
   <div class="task-list">
       <div class="task-list-name">
+        <i class="fa fa-bars" aria-hidden="true"></i>
         <h3>Create Price Quotation</h3>
         <span class="estimated-time">Estimated Time: 1hr</span>
-        <span class="priority-level">PRIORITY LEVEL: </span>
+        <span class="priority-level">PRIORITY LEVEL: <i class="fa fa-circle" aria-hidden="true"></i><i class="fa fa-circle" aria-hidden="true"></i><i class="fa fa-circle-o" aria-hidden="true"></i><i class="fa fa-circle-o" aria-hidden="true"></i><i class="fa fa-circle-o" aria-hidden="true"></i> </span>
+      </div>
+      <div class="task-list-start-button">
+          <button class="btn btn-primary">Start Task</button>
+      </div>
+  </div>
+
+  <div class="task-list">
+      <div class="task-list-name">
+        <i class="fa fa-bars" aria-hidden="true"></i>
+        <h3>Create Price Quotation</h3>
+        <span class="estimated-time">Estimated Time: 1hr</span>
+        <span class="priority-level">PRIORITY LEVEL: <i class="fa fa-circle" aria-hidden="true"></i><i class="fa fa-circle" aria-hidden="true"></i><i class="fa fa-circle-o" aria-hidden="true"></i><i class="fa fa-circle-o" aria-hidden="true"></i><i class="fa fa-circle-o" aria-hidden="true"></i> </span>
+      </div>
+      <div class="task-list-start-button">
+          <button class="btn btn-primary">Start Task</button>
+      </div>
+  </div>
+
+  <div class="task-list">
+      <div class="task-list-name">
+        <i class="fa fa-bars" aria-hidden="true"></i>
+        <h3>Create Price Quotation</h3>
+        <span class="estimated-time">Estimated Time: 1hr</span>
+        <span class="priority-level">PRIORITY LEVEL: <i class="fa fa-circle" aria-hidden="true"></i><i class="fa fa-circle" aria-hidden="true"></i><i class="fa fa-circle-o" aria-hidden="true"></i><i class="fa fa-circle-o" aria-hidden="true"></i><i class="fa fa-circle-o" aria-hidden="true"></i> </span>
       </div>
       <div class="task-list-start-button">
           <button class="btn btn-primary">Start Task</button>
