--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -284,7 +284,7 @@ app-home a.btn {
 }
 .task-list .task-list-name h3 {
   margin: 0;
-  font-size: 1.2em;
+  font-size: 1.1em;
   font-weight: 700;
 }
 .task-list .task-list-name .estimated-time {
@@ -299,6 +299,28 @@ app-home a.btn {
   font-size: 0.8em;
   margin: 5px 0 0;
 }
+.task-list .task-list-name > i {
+  float: left;
+  font-size: 12px;
+  min-height: 60px;
+  line-height: 5.2em;
+  margin: 0 12px 0 0;
+  color: #999;
+}
+.task-list .task-list-name .priority-level i.fa-circle {
+  font-size: 10px;
+  margin: 0 2px;
+  color: #EE493B;
+  display: inline-block;
+}
+.task-list .task-list-name .priority-level i.fa-circle-o {
+  display: inline-block;
+  width: 10px;
+  border: 1px solid #EE493B;
+  height: 10px;
+  border-radius: 10px;
+  margin: 0 2px;
+}
 .task-list .task-list-start-button {
   width: 25%;
   float: left;
@@ -309,6 +331,7 @@ app-home a.btn {
   border: 1px solid #EE493B;
   color: #EE493B;
 }
+
 
 /* Add Tasks */
 app-add-task div.form-group {
