--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,36 +1,35 @@
-<div class='main-nav' *ngIf='nav.isVisible'>
-    <div class='navbar navbar-inverse'>
-        <div class='navbar-header'>
-            <button type='button' class='navbar-toggle' data-toggle='collapse' data-target='.navbar-collapse' [attr.aria-expanded]='isExpanded'
-                (click)='toggle()'>
-                <span class='sr-only'>Toggle navigation</span>
-                <span class='icon-bar'></span>
-                <span class='icon-bar'></span>
-                <span class='icon-bar'></span>
+<div class='main-nav' *ngIf="nav.isVisible">
+    <div class='navbar navbar-inverse '>
+        <div class='navbar-header '>
+            <button type='button ' class='navbar-toggle ' data-toggle='collapse ' data-target='.navbar-collapse'>
+                <span class='sr-only '>Toggle navigation</span>
+                <span class='icon-bar '></span>
+                <span class='icon-bar '></span>
+                <span class='icon-bar '></span>
             </button>
-            <a class='navbar-brand' [routerLink]='["/"]'>Neuron</a>
+            <div class='navbar-brand'>Neuron</div>
         </div>
-        <div class='clearfix'></div>
-        <div class='navbar-collapse collapse' [ngClass]='{ "in": isExpanded }'>
-            <ul class='nav navbar-nav'>
-                <li [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
-                    <a [routerLink]='["/"]' (click)='collapse()'>
-                        <i class='fas fa-home'></i> Home
+        <div class='clearfix '></div>
+        <div class='navbar-collapse collapse'>
+            <ul class='nav navbar-nav '>
+                <li [routerLinkActive]='[ "link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
+                    <a [routerLink]='[ "/"]'>
+                        <i class='fas fa-home '></i> Home
                     </a>
                 </li>
                 <li [routerLinkActive]='["link-active"]'>
-                    <a [routerLink]='["/tasks"]' (click)='collapse()'>
-                        <i class='fas fa-tasks'></i> Tasks
+                    <a [routerLink]='[ "/tasks"]'>
+                        <i class='fas fa-tasks '></i> Tasks
                     </a>
                 </li>
                 <li [routerLinkActive]='["link-active"]'>
-                    <a [routerLink]='["/add-task"]' (click)='collapse()'>
-                        <i class='fas fa-plus'></i> Add Task
+                    <a [routerLink]='[ "/add-task"]'>
+                        <i class='fas fa-plus '></i> Add Task
                     </a>
                 </li>
                 <li [routerLinkActive]='["link-active"]'>
-                    <a [routerLink]='["/settings"]' (click)='collapse()'>
-                        <span class='fas fa-cogs'></span> Settings
+                    <a [routerLink]='[ "/settings"]'>
+                        <i class='fas fa-cogs '></i> Settings
                     </a>
                 </li>
             </ul>
