--- a/ClientApp/src/app/add-task/add-task.component.html
+++ b/ClientApp/src/app/add-task/add-task.component.html
@@ -1,4 +1,7 @@
 <div class="content-header">
+  <a href="#">
+    <i class="fa fa-arrow-left" aria-hidden="true"></i>
+  </a>
   <h1>
     <b>Add</b> a Task</h1>
 </div>
