--- a/ClientApp/src/app/tasks/tasks.component.html
+++ b/ClientApp/src/app/tasks/tasks.component.html
@@ -3,7 +3,7 @@
   <h1><b>Plan</b> Your Day</h1>
 </div>
 
-<div class="content-container">
+<div class="content-container tasks">
   <div class="post-header-container">
     <div class="motivational-quote">
       <p class="title">Today's Motivational Quote</p>
