--- a/ClientApp/src/app/settings/settings.component.html
+++ b/ClientApp/src/app/settings/settings.component.html
@@ -63,6 +63,6 @@
                 <span class="slider round"></span>
             </label>
         </div>
-        <button class="btn btn-primary" (click)="incrementCounter()">Save Settings</button>
+        <button class="btn btn-primary">Save Settings</button>
     </form>
 </div>
