--- a/ClientApp/src/app/add-task/add-task.component.html
+++ b/ClientApp/src/app/add-task/add-task.component.html
@@ -4,14 +4,13 @@
 </div>
 
 <div class="content-container">
-  <form name="form" (ngSubmit)="f.form.valid && addTask()" #f="ngForm" novalidate>
-    <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !taskName.valid }">
+  <form name="form" (ngSubmit)="f.form.valid" #f="ngForm" novalidate>
+    <div class="form-group" [ngClass]="{ 'has-error': f.submitted }">
       <label for="taskName">I need to...</label>
-      <input type="text" class="form-control task-name" name="taskName" [(ngModel)]="model.taskName" #taskName="ngModel" required
-      />
-      <div *ngIf="f.submitted && !taskName.valid" class="help-block">Task name is required</div>
+      <input type="text" class="form-control task-name" />
+      <div *ngIf="f.submitted" class="help-block">Task name is required</div>
     </div>
-    <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !priorityLevel.valid }">
+    <div class="form-group" [ngClass]="{ 'has-error': f.submitted}">
       <label for="priorityLevel">Priority level</label>
       <select class="form-control" id="focusTimeSelect">
         <option>1</option>
@@ -20,9 +19,9 @@
         <option>4</option>
         <option>5</option>
       </select>
-      <div *ngIf="f.submitted && !priorityLevel.valid" class="help-block">Priority level is required</div>
+      <div *ngIf="f.submitted" class="help-block">Priority level is required</div>
     </div>
-    <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !estimatedCompletionTime.valid }">
+    <div class="form-group" [ngClass]="{ 'has-error': f.submitted}">
       <label for="estimatedCompletionTime">Estimated time to complete</label>
       <div class="horizontal-slidecontainer">
         <input type="range" min="1" max="100" value="50" class="horizontal-slider" id="myRange">
@@ -30,7 +29,7 @@
           <span id="demo"></span>
         </p>
       </div>
-      <div *ngIf="f.submitted && !estimatedCompletionTime.valid" class="help-block">Estimated time is required</div>
+      <div *ngIf="f.submitted" class="help-block">Estimated time is required</div>
     </div>
     <div class="form-group">
       <label for="focusTimeSelect">Focus time</label>
