Add link to tasks on back arrow

--- a/ClientApp/src/app/add-task/add-task.component.html
+++ b/ClientApp/src/app/add-task/add-task.component.html
@@ -1,5 +1,5 @@
 <div class="content-header">
-  <a href="#">
+  <a [routerLink]='[ "/tasks"]'>
     <i class="fa fa-arrow-left" aria-hidden="true"></i>
   </a>
   <h1>
