--- a/ClientApp/src/app/settings/settings.component.html
+++ b/ClientApp/src/app/settings/settings.component.html
@@ -1,7 +1,7 @@
 <div class="content-header">
-        <a href="#">
-                <i class="fa fa-arrow-left" aria-hidden="true"></i>
-              </a>
+    <a [routerLink]='[ "/tasks"]'>
+        <i class="fa fa-arrow-left" aria-hidden="true"></i>
+    </a>
     <h1>
         <b>Edit</b> Settings
     </h1>
