--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -518,6 +518,96 @@ app-settings .btn-primary {
   background: #4CAF50;
   cursor: pointer;
 }
+/* Loader Script */
+.splash-screen {
+    width: 100%;
+    min-height: 100vh;
+    background: #EE493B;
+    top: 0;
+    position: relative;
+    text-align: center;
+}
+.splash-screen h1 {
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 100;
+  font-size: 30px;
+  padding: 95px 0 0;
+  margin: 0;
+}
+.splash-percent {
+  color: #fff;
+  position: fixed;
+  top: 50%;
+  width: 100%;
+  font-size: 1.2em;
+  font-weight: 100;
+  line-height: 40px;
+}
+.splash-percent span {
+  display: block;
+  font-size: 4.0em;
+  font-weight: 700;
+}
+#loader {
+  position: absolute;
+  left: 42%;
+  top: 48%;
+  z-index: 1;
+  margin: -75px 0 0 -75px;
+  border: 12px solid #B4261B;
+  border-radius: 50%;
+  border-top: 12px solid #eee;
+  width: 220px;
+  height: 220px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+/* Add animation to "page content" */
+.animate-bottom {
+  position: relative;
+  -webkit-animation-name: animatebottom;
+  -webkit-animation-duration: 1s;
+  animation-name: animatebottom;
+  animation-duration: 1s
+}
+
+@-webkit-keyframes animatebottom {
+  from { bottom:-100px; opacity:0 } 
+  to { bottom:0px; opacity:1 }
+}
+
+@keyframes animatebottom { 
+  from{ bottom:-100px; opacity:0 } 
+  to{ bottom:0; opacity:1 }
+}
+
+#myDiv {
+  display: none;
+  text-align: center;
+}
+.splash-logo-footer {
+  background-image: url("assets/logo.png");
+  width: 50px;
+  height: 50px;
+  margin: 0;
+  bottom: 32px;
+  position: absolute;
+  background-size: 50px;
+  left: 42%;
+  right: 42%;
+}
 /* Mobile View */
 @media (max-width: 768px) {
   .content-container {
