--- a/ClientApp/src/app/add-task/add-task.component.html
+++ b/ClientApp/src/app/add-task/add-task.component.html
@@ -61,7 +61,7 @@
         <span class="slider round"></span>
       </label>
     </div>
-    <button class="btn btn-primary">Add Task</button>
+    <button class="btn btn-primary" [routerLink]='[ "/current-task"]'>Add Task</button>
   </form>
 </div>
 <script>
