--- a/ClientApp/src/app/current-task/current-task.component.html
+++ b/ClientApp/src/app/current-task/current-task.component.html
@@ -1,3 +1,30 @@
-<p>
-  current-task works!
-</p>
+<div class="splash-screen">
+    <h1>
+            <b>Sync</b><br>with Device
+        </h1>
+    
+    <div onload="myFunction()" style="margin:0;">
+            <div class="splash-percent"><span>95</span>PERCENT</div>
+            <div id="loader"></div>
+            
+            <div style="display:none;" id="myDiv" class="animate-bottom">
+              <h2>Tada!</h2>
+              <p>Some text in my newly loaded page..</p>
+            </div>
+            
+            <script>
+            var myVar;
+            
+            function myFunction() {
+                myVar = setTimeout(showPage, 3000);
+            }
+            
+            function showPage() {
+              document.getElementById("loader").style.display = "none";
+              document.getElementById("myDiv").style.display = "block";
+            }
+            </script>
+            
+            </div>
+            <div class="splash-logo-footer"></div>
+</div>
