--- a/ClientApp/src/app/current-task/current-task.component.html
+++ b/ClientApp/src/app/current-task/current-task.component.html
@@ -1,30 +1,9 @@
-<div class="splash-screen">
+<div class="splash-screen current-task">
     <h1>
-            <b>Sync</b><br>with Device
+            <b>CURRENT</b> TASK
         </h1>
     
-    <div onload="myFunction()" style="margin:0;">
-            <div class="splash-percent"><span>95</span>PERCENT</div>
-            <div id="loader"></div>
-            
-            <div style="display:none;" id="myDiv" class="animate-bottom">
-              <h2>Tada!</h2>
-              <p>Some text in my newly loaded page..</p>
-            </div>
-            
-            <script>
-            var myVar;
-            
-            function myFunction() {
-                myVar = setTimeout(showPage, 3000);
-            }
-            
-            function showPage() {
-              document.getElementById("loader").style.display = "none";
-              document.getElementById("myDiv").style.display = "block";
-            }
-            </script>
-            
-            </div>
-            <div class="splash-logo-footer"></div>
+    <div class="current-focus-time">FOCUS TIME<span>Do HomeWork 1</span></div>
+    
+    <div class="splash-logo-footer"></div>
 </div>
