--- a/ClientApp/src/app/sync-successful/sync-successful.component.html
+++ b/ClientApp/src/app/sync-successful/sync-successful.component.html
@@ -1,3 +1,16 @@
-<p>
-  sync-successful works!
-</p>
+<div class="splash-screen" style="padding: 20% 0 0;">
+    <div class="sync-successful-container">
+      <h1>
+        <b>Sync</b><br>Successful
+      </h1>
+      <i class="fa fa-check" aria-hidden="true"></i>
+
+      <h3>Start Task?</h3>
+      <div class="start-task-btns">
+      <a [routerLink]='[ "/current-task"]'><i class="fa fa-check-circle" aria-hidden="true"></i></a>
+      <a [routerLink]='[ "/tasks"]'><i class="fa fa-times-circle" aria-hidden="true"></i></a>
+    </div>
+    </div>
+    
+  <div class="splash-logo-footer"></div>
+</div>
