linked bottom logo to task screen

--- a/ClientApp/src/app/current-task/current-task.component.html
+++ b/ClientApp/src/app/current-task/current-task.component.html
@@ -5,5 +5,5 @@
     
     <div class="current-focus-time">FOCUS TIME<span>Do HomeWork 1</span></div>
     
-    <div class="splash-logo-footer"></div>
+    <a [routerLink]='[ "/tasks"]' class="splash-logo-footer">&nbsp;</a>
 </div>
