--- a/ClientApp/src/app/sync-device/sync-device.component.html
+++ b/ClientApp/src/app/sync-device/sync-device.component.html
@@ -26,5 +26,5 @@
             </script>
             
             </div>
-            <div class="splash-logo-footer"></div>
+            <a [routerLink]='[ "/tasks"]' class="splash-logo-footer">&nbsp;</a>
 </div>
