--- a/ClientApp/src/app/sync-successful/sync-successful.component.html
+++ b/ClientApp/src/app/sync-successful/sync-successful.component.html
@@ -12,5 +12,5 @@
     </div>
     </div>
     
-  <div class="splash-logo-footer"></div>
+    <a [routerLink]='[ "/tasks"]' class="splash-logo-footer">&nbsp;</a>
 </div>
