--- a/ClientApp/src/app/add-task/add-task.component.html
+++ b/ClientApp/src/app/add-task/add-task.component.html
@@ -16,11 +16,11 @@
     <div class="form-group" [ngClass]="{ 'has-error': f.submitted}">
       <label for="priorityLevel">Priority level</label>
       <select class="form-control" id="focusTimeSelect">
-        <option>1</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
+        <option>Lowest</option>
+        <option>Lower</option>
+        <option selected="selected">Medium</option>
+        <option>Higher</option>
+        <option>Highest</option>
       </select>
       <div *ngIf="f.submitted" class="help-block">Priority level is required</div>
     </div>
@@ -35,23 +35,31 @@
       <div *ngIf="f.submitted" class="help-block">Estimated time is required</div>
     </div>
     <div class="form-group">
-      <label for="focusTimeSelect">Focus time</label>
+      <label for="focusTimeSelect">Focus time (minutes)</label>
       <select class="form-control" id="focusTimeSelect">
-        <option>1</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
+          <option>5</option>
+          <option>10</option>
+          <option>15</option>
+          <option>20</option>
+          <option selected="selected">25</option>
+          <option>30</option>
+          <option>35</option>
+          <option>40</option>
+          <option>45</option>
+          <option>50</option>
+          <option>55</option>
+          <option>60</option>
       </select>
     </div>
     <div class="form-group">
-      <label for="breakTimeSelect">Break time</label>
+      <label for="breakTimeSelect">Break time (minutes)</label>
       <select class="form-control" id="breakTimeSelect">
-        <option>1</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
+        <option selected="selected">5</option>
+        <option>10</option>
+        <option>15</option>
+        <option>20</option>
+        <option>25</option>
+        <option>30</option>
       </select>
     </div>
     <div class="form-group sync-device">
