--- a/ClientApp/src/app/add-task/add-task.component.html
+++ b/ClientApp/src/app/add-task/add-task.component.html
@@ -27,8 +27,8 @@
     <div class="form-group" [ngClass]="{ 'has-error': f.submitted}">
       <label for="estimatedCompletionTime">Estimated time to complete</label>
       <div class="horizontal-slidecontainer">
-        <input type="range" min="1" max="100" value="50" class="horizontal-slider" id="myRange">
-        <p>Value:
+        <input type="range" min="30" max="180" value="30" step="15" class="horizontal-slider" id="myRange">
+        <p>Minutes:
           <span id="demo"></span>
         </p>
       </div>
@@ -37,18 +37,18 @@
     <div class="form-group">
       <label for="focusTimeSelect">Focus time (minutes)</label>
       <select class="form-control" id="focusTimeSelect">
-          <option>5</option>
-          <option>10</option>
-          <option>15</option>
-          <option>20</option>
-          <option selected="selected">25</option>
-          <option>30</option>
-          <option>35</option>
-          <option>40</option>
-          <option>45</option>
-          <option>50</option>
-          <option>55</option>
-          <option>60</option>
+        <option>5</option>
+        <option>10</option>
+        <option>15</option>
+        <option>20</option>
+        <option selected="selected">25</option>
+        <option>30</option>
+        <option>35</option>
+        <option>40</option>
+        <option>45</option>
+        <option>50</option>
+        <option>55</option>
+        <option>60</option>
       </select>
     </div>
     <div class="form-group">
@@ -73,11 +73,5 @@
   </form>
 </div>
 <script>
-  var slider = document.getElementById("myRange");
-  var output = document.getElementById("demo");
-  output.innerHTML = slider.value;
 
-  slider.oninput = function () {
-    output.innerHTML = this.value;
-  }
 </script>
