--- a/ClientApp/src/app/add-task/add-task.component.html
+++ b/ClientApp/src/app/add-task/add-task.component.html
@@ -27,9 +27,13 @@
     <div class="form-group" [ngClass]="{ 'has-error': f.submitted}">
       <label for="estimatedCompletionTime">Estimated time to complete</label>
       <div class="horizontal-slidecontainer">
+        <div class="slider-minutes">
+          <p class="min-minutes">5</p>
+          <p class="max-minutes">60</p>
+        </div>
         <input type="range" min="30" max="180" value="30" step="15" class="horizontal-slider" id="estimatedTime">
         <p>Minutes:
-          <span id="demo"></span>
+          <span id="demo-text"></span>
         </p>
       </div>
       <div *ngIf="f.submitted" class="help-block">Estimated time is required</div>
