--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -217,14 +217,14 @@ app-home a.btn {
 .content-header {
   background-color: #EE493B;
   text-align: center;
-  padding: 30px 0px;
+  padding: 15px 0px;
   margin: 0 0 14px;
 }
 .content-header i {
   color: #fff;
   float: left;
   position: absolute;
-  top: 56px;
+  top: 40px;
   left: 24px;
 }
 .content-header h1 {
@@ -268,8 +268,8 @@ app-home a.btn {
   display: inline-block;
   color: #fff;
   font-weight: 600;
-  font-size: 1.6em;
-  padding: 12px 58px 12px 6%;
+  font-size: 1.4em;
+  padding: 12px 70px 12px 18px;
   border-radius: 0 35px 35px 0;
   margin: 12px 0 20px -6%;
 }
